feat: script and label in testcase
