# controller/backend/constant/constant.go
@@ -51,6 +51,7 @@ const (
 	BUCKET_TENANT     = "tenant"
 	BUCKET_DISCORD_ID = "discord_id"
 	BUCKET_TESTCASE   = "testcase"
+	BUCKET_LABEL      = "label"
 	BUCKET_TASK_ID    = "taskId"
 	BUCKET_RUNNER     = "runner"
 	BUCKET_HISTORY    = "history"
